# ckb_miden_test

./: Cargo.toml  README.md  capsule.toml
contracts/ckb_miden_test/: Cargo.toml
contracts/ckb_miden_test/src/: entry.rs
tests/: Cargo.toml
tests/src/: tests.rs
