[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.6"
log = { version = "0.4" }
hex = { version = "0.4" }
env_logger = { version = "0.9" }
miden = { git = "https://github.com/maticnetwork/miden", version = "0.1"}
miden-examples = { package = "examples",  git = "https://github.com/maticnetwork/miden"}
