[package]
name = "ckb_miden_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"

[dependencies.miden-verifier]
package = "miden-verifier"
git = "https://github.com/maticnetwork/miden"
version = "0.1"
default-features = false